--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,9 +11,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
   </head>
   <body>
-    <h1>Title</h1>
+  <div class="container">
 
-    {% for person in people: %}
+  </div>
+ 
+   
+
+
+
+<!--     {% for person in people: %}
       <p>{{ person.first_name }}</p>
       <p>{{ person.last_name }}</p>
       <p>{{ person.university }}</p>
@@ -24,7 +30,7 @@
         <button type="submit" name="vote" value="down">Downvote</button>
       </form>
       <hr>
-    {% endfor %}
+    {% endfor %} -->
 
 
     <script src="{{ url_for('static', filename='js/jquery-1.12.2.min.js') }}"></script>
