--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
   </head>
   <body>
+  <div class="logo">
+    <span class="team">team</span>
+    <span>_</span>
+    <span class="member1">01.</span>
+    <span class="member2">02.</span>
+    <span class="member3">03.</span>
+    <span class="member4">04</span>
+  </div>
   <div class="container">
 
   </div>
