--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,10 +14,6 @@
   <div class="container">
 
   </div>
- 
-   
-
-
 
 <!--     {% for person in people: %}
       <p>{{ person.first_name }}</p>
@@ -32,10 +28,10 @@
       <hr>
     {% endfor %} -->
 
-
     <script src="{{ url_for('static', filename='js/jquery-1.12.2.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery-ui.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/mustache.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
   </body>
 </html>
