--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -28,16 +28,13 @@ body {
     top: 0;
 }
 
-.grid div {
+.cell{
+    opacity: 0.6;
+    transition: background 2s;
     border: 1px solid #000;
     border-width: 0 1px 1px 0;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.3);  
     float: left;
-}
-
-.cell{
-    opacity: 0.6;
-    transition: background 2s;
 }
 
 .cell:hover{
@@ -115,4 +112,22 @@ body {
     opacity: 1;
     border: 1px solid #53A3CF;
     border-width: 0 1px 1px 0;
+}
+
+.member_number {
+    color: white;
+    font-size: 45px;
+    border-width: 0;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);  
+    float: right;
+    text-align: right;
+    margin-right: 5px;
+}
+
+.member_name {
+    color: white;
+    font-size: 18px;
+    border-width: 0;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);  
+    float: left;
 }
