--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,21 @@
     <span class="member3">03.</span>
     <span class="member4">04</span>
   </div>
+
+  {% raw %}
+  <script id="member-template" type="x-tmpl-mustache">
+      <div class='col-sm-12 member_number pull-right'>
+        0{{ member.id }}
+    </div>
+    <div class='col-sm-12 member_name'>
+        {{ member.first_name }}
+        <br/>
+        <b>{{ member.last_name }}</b>
+    </div>
+
+  </script>
+  {% endraw %}
+
   <div class="container">
 
   </div>
