--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -131,3 +131,8 @@ body {
     box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);  
     float: left;
 }
+
+.member-image {
+    width: 100%;
+    height: 100%;
+}
