--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,7 +19,7 @@
     <span class="member3">03.</span>
     <span class="member4">04</span>
   </div>
-
+  
   {% raw %}
   <script id="member-template" type="x-tmpl-mustache">
     <div class='col-sm-12 member_number pull-right'>
@@ -58,6 +58,7 @@
     <script src="{{ url_for('static', filename='js/jquery-ui.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/mustache.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jqueryFlip.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
   </body>
 </html>
