--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -35,6 +35,7 @@ body {
     border-width: 0 1px 1px 0;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.3);  
     float: left;
+    display: block;
 }
 
 .cell:hover{
@@ -78,7 +79,8 @@ body {
 .member_cell_1:hover {
     background-color: #F25C5C;
     opacity: 1;
-    border: 1px solid #F25C5C;
+    border: 0px solid #F25C5C;
+    border-width:0;
 }
 
 .member_cell_2 {
@@ -88,8 +90,8 @@ body {
 .member_cell_2:hover {
     background-color: #2FC26A;
     opacity: 1;
-    border: 1px solid #2FC26A;
-    border-width: 0 1px 1px 0;
+    border: 0px solid #2FC26A;
+    border-width:0;
 }
 
 .member_cell_3 {
@@ -99,8 +101,8 @@ body {
 .member_cell_3:hover {
     background-color: #EBEB72;
     opacity: 1;
-        border: 1px solid #EBEB72;
-    border-width: 0 1px 1px 0;
+        border: 0px solid #EBEB72;
+    border-width: 0;
 }
 
 .member_cell_4 {
@@ -110,8 +112,8 @@ body {
 .member_cell_4:hover {
     background-color: #53A3CF;
     opacity: 1;
-    border: 1px solid #53A3CF;
-    border-width: 0 1px 1px 0;
+    border: 0px solid #53A3CF;
+    border-width: 0;
 }
 
 .member_number {
