--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,24 +19,29 @@
     <span class="member3">03.</span>
     <span class="member4">04</span>
   </div>
-  
-  {% raw %}
-  <script id="member-template" type="x-tmpl-mustache">
-    <div class='col-sm-12 member_number pull-right'>
-      0{{ member.id }}
-    </div>
-    <div class='col-sm-12 member_name'>
-      {{ member.first_name }}
-      <br/>
-      <b>{{ member.last_name }}</b>
-    </div>  
-  </script>
-  {% endraw %}
+
 
   {% raw %}
-  <script id="member-picture-template" type="x-tmpl-mustache">
-       <img class='member-image'  src="/static/img/member_1.jpg" />
-  </script>
+    <script id="member-template" type="x-tmpl-mustache">
+      <div class="front"> 
+        <div>
+          <div class='col-sm-12 member_number pull-right'>
+            0{{ member.id }}
+          </div>
+          <div class='col-sm-12 member_name'>
+            {{ member.first_name }}
+            <br/>
+            <b>{{ member.last_name }}</b>
+          </div>      
+        </div> 
+      </div>
+
+      <div class="back">
+        <img class='member-image' src="/static/img/member_1.jpg" />
+      </div> 
+    </script>
+
+  </div>
   {% endraw %}
   <div class="container">
   </div>
