Added member info card

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,7 +24,7 @@
   {% raw %}
     <script id="member-template" type="x-tmpl-mustache">
       <div class="front"> 
-        <div>
+          <div>
           <div class='col-sm-12 member_number pull-right'>
             0{{ member.id }}
           </div>
@@ -33,16 +33,34 @@
             <br/>
             <b>{{ member.last_name }}</b>
           </div>      
-        </div> 
+          </div> 
       </div>
 
       <div class="back">
-        <img class='member-image' src="/static/img/member_{{ member.id }}.jpg" />
+       <img class='member-image' src="/static/img/member_{{ member.id }}.jpg" />
       </div> 
     </script>
-
-  </div>
   {% endraw %}
+
+  {% raw %}
+    <script id="member-template-info" type="x-tmpl-mustache">
+         <div>
+          <div class='col-sm-12 member-text member-text-large'>
+              {{ member.first_name }} <br/> {{ member.last_name }}
+          </div>
+          <div class='col-sm-12 margin-top member-text member-text-mid'>
+              23 <br> {{ member.university }} 
+          </div>
+        </div>
+    </script>
+  {% endraw %}
+
+    {% raw %}
+    <script id="member-template-interests" type="x-tmpl-mustache">
+       
+    </script>
+  {% endraw %}
+
   <div class="container">
   </div>
 
