--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -138,3 +138,19 @@ body {
     width: 100%;
     height: 100%;
 }
+
+.member-text {
+    color: white;
+}
+
+.member-text-large {
+    font-size: 20px;
+}
+
+.member-text-mid {
+    font-size: 16px;
+}
+
+.margin-top {
+    margin-top: 10px;
+}
