--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/jquery-ui.structure.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/jquery-ui.theme.min.css') }}">
+     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
   </head>
   <body>
@@ -24,7 +25,7 @@
   {% raw %}
     <script id="member-template" type="x-tmpl-mustache">
       <div class="front"> 
-          <div>
+        <div>
           <div class='col-sm-12 member_number pull-right'>
             0{{ member.id }}
           </div>
@@ -34,6 +35,7 @@
             <b>{{ member.last_name }}</b>
           </div>      
           </div> 
+                
       </div>
 
       <div class="back">
@@ -56,8 +58,23 @@
   {% endraw %}
 
     {% raw %}
-    <script id="member-template-interests" type="x-tmpl-mustache">
-       
+    <script id="member-template-links" type="x-tmpl-mustache">
+
+        <div>
+          <div class='col-sm-12'>
+            <a href=#><i class="fa fa-envelope fa-3x"></i></a>
+          </div>
+
+          <div class='col-sm-12'>
+            <div class='col-sm-6'>
+                <a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
+            </div>   
+            <div class='col-sm-6'>
+                <a href="#"><i class="fa fa-github-square fa-3x"></i></a>
+            </div> 
+          </div>
+
+        </div>
     </script>
   {% endraw %}
 
