--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -151,6 +151,18 @@ body {
     font-size: 16px;
 }
 
+.center {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.nopadding {
+    padding: 0;
+    margin: 0;
+}
 .margin-top {
     margin-top: 10px;
+}
+.black {
+    color: black;
 }
