--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,10 +34,8 @@
             <br/>
             <b>{{ member.last_name }}</b>
           </div>      
-          </div> 
-                
+          </div>    
       </div>
-
       <div class="back">
        <img class='member-image' src="/static/img/member_{{ member.id }}.jpg" />
       </div> 
@@ -57,24 +55,22 @@
     </script>
   {% endraw %}
 
-    {% raw %}
+  {% raw %}
     <script id="member-template-links" type="x-tmpl-mustache">
-
-        <div>
-          <div class='col-sm-12'>
-            <a href=#><i class="fa fa-envelope fa-3x"></i></a>
+      <div>
+          <div class='col-sm-12 center nopadding margin-top'>
+            <a href=#><i class="fa fa-envelope-o fa-3x black"></i></a>
           </div>
 
-          <div class='col-sm-12'>
-            <div class='col-sm-6'>
-                <a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <div class='col-sm-12 center nopadding margin-top'>
+            <div class='col-sm-6 center'>
+                <a href="#"><i class="fa fa-linkedin-square fa-3x black"></i></a>
             </div>   
-            <div class='col-sm-6'>
-                <a href="#"><i class="fa fa-github-square fa-3x"></i></a>
+            <div class='col-sm-6 center'>
+                <a href="#"><i class="fa fa-github-square fa-3x black"></i></a>
             </div> 
           </div>
-
-        </div>
+      </div>
     </script>
   {% endraw %}
 
