--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,7 +24,7 @@
 
   {% raw %}
     <script id="member-template" type="x-tmpl-mustache">
-      <div class="front"> 
+      <div class="front">
         <div>
           <div class='col-sm-12 member_number pull-right'>
             0{{ member.id }}
@@ -33,27 +33,31 @@
             {{ member.first_name }}
             <br/>
             <b>{{ member.last_name }}</b>
-          </div>      
-          </div> 
-                
+          </div>
+          </div>
+
       </div>
 
       <div class="back">
        <img class='member-image' src="/static/img/member_{{ member.id }}.jpg" />
-      </div> 
+      </div>
     </script>
   {% endraw %}
 
   {% raw %}
     <script id="member-template-info" type="x-tmpl-mustache">
+      <div class="front">
+      </div>
+      <div class="back">
          <div>
           <div class='col-sm-12 member-text member-text-large'>
               {{ member.first_name }} <br/> {{ member.last_name }}
           </div>
           <div class='col-sm-12 margin-top member-text member-text-mid'>
-              23 <br> {{ member.university }} 
+              23 <br> {{ member.university }}
           </div>
         </div>
+      </div>
     </script>
   {% endraw %}
 
@@ -68,10 +72,10 @@
           <div class='col-sm-12'>
             <div class='col-sm-6'>
                 <a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
-            </div>   
+            </div>
             <div class='col-sm-6'>
                 <a href="#"><i class="fa fa-github-square fa-3x"></i></a>
-            </div> 
+            </div>
           </div>
 
         </div>
