Flip cell on the right

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -61,19 +61,24 @@
 
   {% raw %}
     <script id="member-template-links" type="x-tmpl-mustache">
-      <div>
-          <div class='col-sm-12 center nopadding margin-top'>
-            <a href=#><i class="fa fa-envelope-o fa-3x black"></i></a>
-          </div>
+      <div class="front">
+      </div>
+      <div class="back">
 
-          <div class='col-sm-12 center nopadding margin-top'>
-            <div class='col-sm-6 center'>
-                <a href="#"><i class="fa fa-linkedin-square fa-3x black"></i></a>
+        <div>
+            <div class='col-sm-12 center nopadding margin-top'>
+              <a href=#><i class="fa fa-envelope-o fa-3x black"></i></a>
             </div>
-            <div class='col-sm-6 center'>
-                <a href="#"><i class="fa fa-github-square fa-3x black"></i></a>
+
+            <div class='col-sm-12 center nopadding margin-top'>
+              <div class='col-sm-6 center'>
+                  <a href="#"><i class="fa fa-linkedin-square fa-3x black"></i></a>
+              </div>
+              <div class='col-sm-6 center'>
+                  <a href="#"><i class="fa fa-github-square fa-3x black"></i></a>
+              </div>
             </div>
-          </div>
+        </div>
       </div>
     </script>
   {% endraw %}
