Add skills squarić

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,10 +34,10 @@
             {{ member.first_name }}
             <br/>
             <b>{{ member.last_name }}</b>
-          </div>      
-        </div> 
+          </div>
+        </div>
       </div>
-       
+
       <div class="back">
        <img class='member-image' src="/static/img/member_{{ member.id }}.jpg" />
       </div>
@@ -46,21 +46,28 @@
 
   {% raw %}
     <script id="member-template-info" type="x-tmpl-mustache">
-     
-         <div>
-            <div class='col-sm-12 member-text member-text-large'>
-                {{ member.first_name }} <br/> {{ member.last_name }}
-            </div>
-            <div class='col-sm-12 margin-top member-text member-text-mid'>
-                23 <br> {{ member.university }}
-            </div>
+      <div class="front">
+      </div>
+      <div class="back">
+        <div
+           <div>
+              <div class='col-sm-12 member-text member-text-large'>
+                  {{ member.first_name }} <br/> {{ member.last_name }}
+              </div>
+              <div class='col-sm-12 margin-top member-text member-text-mid'>
+                  23 <br> {{ member.university }}
+              </div>
+          </div>
         </div>
+      </div>
     </script>
   {% endraw %}
 
   {% raw %}
     <script id="member-template-links" type="x-tmpl-mustache">
-
+      <div class="front">
+      </div>
+      <div class="back">
         <div>
             <div class='col-sm-12 center nopadding margin-top'>
               <a href=#><i class="fa fa-envelope-o fa-3x black"></i></a>
@@ -75,15 +82,21 @@
               </div>
             </div>
         </div>
-
+      </div>
     </script>
   {% endraw %}
 
   {% raw %}
     <script id="member-template-skills" type="x-tmpl-mustache">
-        <div class='col-sm-12 center margin-top-20'>
-            <i class="fa fa-wrench faa-wrench fa-5x animated-hover"></i>
-          </div>
+      <div class="front">
+      </div>
+      <div class="back">
+        <div>
+          <div class='col-sm-12 center margin-top-20'>
+              <i class="fa fa-wrench faa-wrench fa-5x animated-hover"></i>
+            </div>
+        </div>
+      </div>
     </script>
   {% endraw %}
 
