--- a/app/views/index.html
+++ b/app/views/index.html
@@ -93,7 +93,22 @@
       <div class="back">
         <div>
           <div class='col-sm-12 center margin-top-20'>
+            <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">Toggle popover</a>
               <i class="fa fa-wrench faa-wrench fa-5x animated-hover"></i>
+            </div>
+        </div>
+      </div>
+    </script>
+  {% endraw %}
+
+   {% raw %}
+    <script id="member-template-close" type="x-tmpl-mustache">
+      <div class="front">
+      </div>
+      <div class="back">
+        <div>
+          <div class='col-sm-12 center margin-top-20'>
+              <i class="fa fa-times fa-5x animated-hover"></i>
             </div>
         </div>
       </div>
