Failed fix for popover

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,7 +108,7 @@
       <div class="back">
         <div>
           <div class='col-sm-12 center margin-top-20'>
-              <i class="fa fa-times fa-5x animated-hover"></i>
+              <i class="fa fa-close fa-5x animated-hover"></i>
             </div>
         </div>
       </div>
