--- a/app/views/index.html
+++ b/app/views/index.html
@@ -93,6 +93,7 @@
       <div class="back">
         <div>
           <div class='col-sm-12 center margin-top-20'>
+          <a href="https://www.google.com"  data-toggle="popover"  data-content="Some content inside the popover">Toggle popover</a>
             <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">Toggle popover</a>
               <i class="fa fa-wrench faa-wrench fa-5x animated-hover"></i>
             </div>
