--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
   </head>
   <body>
-  <div class="logo">
+  <div class="col-sm-3 logo">
     <span class="team">team</span>
     <span>_</span>
     <span class="member1">01.</span>
@@ -21,7 +21,6 @@
     <span class="member3">03.</span>
     <span class="member4">04</span>
   </div>
-
 
   {% raw %}
     <script id="member-template" type="x-tmpl-mustache">
@@ -49,7 +48,7 @@
       <div class="front">
       </div>
       <div class="back">
-        <div
+        <div>
            <div>
               <div class='col-sm-12 member-text member-text-large'>
                   {{ member.first_name }} <br/> {{ member.last_name }}
@@ -91,11 +90,12 @@
       <div class="front">
       </div>
       <div class="back">
-        <div>
+        <div >
           <div class='col-sm-12 center margin-top-20'>
-          <a href="https://www.google.com"  data-toggle="popover"  data-content="Some content inside the popover">Toggle popover</a>
-            <a href="#" data-toggle="popover" title="Popover Header" data-content="Some content inside the popover">Toggle popover</a>
+            <a href="#" data-toggle="popover" title="Skills" data-content="{{member.skills}}">
               <i class="fa fa-wrench faa-wrench fa-5x animated-hover"></i>
+            </a>
+              
             </div>
         </div>
       </div>
