Add black skills icon

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -93,7 +93,7 @@
         <div >
           <div class='col-sm-12 center margin-top-20'>
             <a href="#" class='custom-popover' data-toggle="popover" title="Skills" data-content="{{member.skills}}">
-              <i class="fa fa-wrench faa-wrench fa-5x animated-hover"></i>
+              <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
             </a>
               
             </div>
