--- a/app/views/index.html
+++ b/app/views/index.html
@@ -92,7 +92,7 @@
       <div class="back">
         <div >
           <div class='col-sm-12 center margin-top-20'>
-            <a href="#" class='custom-popover' data-toggle="popover" title="Skills" data-content="{{member.skills}}">
+            <a href="#" class='custom-popover' data-toggle="popover" data-container="body" style="z-index:1000; position:relative" title="skills" data-content="{{member.skills}}">
               <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
             </a>
               
