--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,13 +13,8 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
   </head>
   <body>
-  <div class="col-sm-3 logo">
-    <span class="team">team</span>
-    <span>_</span>
-    <span class="member1">01.</span>
-    <span class="member2">02.</span>
-    <span class="member3">03.</span>
-    <span class="member4">04</span>
+  <div class="col-sm-4 logo">
+    <span class="team">team://</span><span class="member1">01.</span><span class="member2">02.</span><span class="member3">03.</span><span class="member4">04</span>
   </div>
 
   {% raw %}
@@ -92,7 +87,7 @@
       <div class="back">
         <div >
           <div class='col-sm-12 center margin-top-20'>
-            <a href="#" class='custom-popover' data-toggle="popover" data-container="body" style="z-index:1000; position:relative" title="skills" data-content="{{member.skills}}">
+            <a href="#" class='custom-popover' data-toggle="popover" data-container="body" style="z-index:1000; position:relative" title="SKILLS" data-content="{{member.skills}}">
               <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
             </a>
               
