--- a/app/views/index.html
+++ b/app/views/index.html
@@ -111,6 +111,20 @@
     </script>
   {% endraw %}
 
+   {% raw %}
+    <script id="member-template-vote" type="x-tmpl-mustache">
+      <div class="front">
+      </div>
+      <div class="back">
+        <div>
+          <div class='col-sm-12 center margin-top-20'>
+              <i class="fa fa-eye fa-5x animated-hover"></i>
+          </div>
+        </div>
+      </div>
+    </script>
+  {% endraw %}
+
   <div class="container">
   </div>
 
