--- a/app/views/index.html
+++ b/app/views/index.html
@@ -49,7 +49,7 @@
                   {{ member.first_name }} <br/> {{ member.last_name }}
               </div>
               <div class='col-sm-12 margin-top member-text member-text-mid'>
-                  23 <br> {{ member.university }}
+                  {{ member.university }} <br> {{ member.year }}
               </div>
           </div>
         </div>
@@ -64,15 +64,15 @@
       <div class="back">
         <div>
             <div class='col-sm-12 center nopadding margin-top'>
-              <a href=#><i class="fa fa-envelope-o fa-3x black"></i></a>
+              <a href='#'><i class="fa fa-envelope-o fa-3x black"></i></a>
             </div>
 
             <div class='col-sm-12 center nopadding margin-top'>
               <div class='col-sm-6 center'>
-                  <a href="#"><i class="fa fa-linkedin-square fa-3x black"></i></a>
+                  <a href="{{ member.linkedin }}" target="_blank"><i class="fa fa-linkedin-square fa-3x black"></i></a>
               </div>
               <div class='col-sm-6 center'>
-                  <a href="#"><i class="fa fa-github-square fa-3x black"></i></a>
+                  <a href="{{ member.github }}" target="_blank"><i class="fa fa-github-square fa-3x black"></i></a>
               </div>
             </div>
         </div>
@@ -117,8 +117,11 @@
       </div>
       <div class="back">
         <div>
-          <div class='col-sm-12 center margin-top-20'>
-              <i class="fa fa-eye fa-5x animated-hover"></i>
+          <div class='col-sm-12 margin-top-20 center'>
+              <i class="fa fa-eye fa-3x black"></i>
+          </div>
+          <div class='col-sm-12 center nopadding member-text member-text-extra-large'>
+              {{ member.rank }}
           </div>
         </div>
       </div>
