--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -161,10 +161,10 @@ body {
     margin: 0;
 }
 .margin-top {
-    margin-top: 10px;
+    margin-top: 10%;
 }
 .margin-top-20 {
-    margin-top: 20px;
+    margin-top: 20%;
 }
 .black {
     color: black;
@@ -252,4 +252,8 @@ body {
     line-height: 75px;
     text-align: center;
     opacity: 0.7;
+}
+
+.hover-expand:hover {
+    font-size: 3.5em;
 }
