--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,17 +63,13 @@
       </div>
       <div class="back">
         <div>
-            <div class='col-sm-12 center nopadding margin-top'>
+            <div class='col-sm-12 center margin-top'>
               <a href='#'><i class="fa fa-envelope-o fa-3x black"></i></a>
             </div>
 
-            <div class='col-sm-12 center nopadding margin-top'>
-              <div class='col-sm-6 center'>
-                  <a href="{{ member.linkedin }}" target="_blank"><i class="fa fa-linkedin-square fa-3x black"></i></a>
-              </div>
-              <div class='col-sm-6 center'>
-                  <a href="{{ member.github }}" target="_blank"><i class="fa fa-github-square fa-3x black"></i></a>
-              </div>
+            <div class='col-sm-12 nopadding center margin-top'>
+                  <a href="{{ member.linkedin }}" target="_blank"><i class="fa fa-linkedin-square fa-3x black hover-expand"></i></a>
+                  <a href="{{ member.github }}" target="_blank"><i class="fa fa-github-square fa-3x black hover-expand"></i></a>
             </div>
         </div>
       </div>
