--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -242,7 +242,7 @@ body {
 
 .close-card:after {
     position: absolute;
-    top: 25px;
+    top: 20%;
     bottom: 0;
     left: 0;
     right: 0;
