--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -232,7 +232,11 @@ body {
     background-color: #53A3CF;
 }
 
-
 .hover-expand:hover {
-    font-size: 3.5em;
+    font-size: 3.3em;
+}
+
+.full {
+    height: 100%;
+    width: 100%;
 }
