--- a/app/views/index.html
+++ b/app/views/index.html
@@ -81,10 +81,13 @@
       <div class="front">
       </div>
       <div class="back">
-          <div class='col-sm-12 center margin-top-20'>
-            <div href="#" data-toggle="popover" data-container="body" style="z-index:1000; position:relative"
-                title="SKILLS" data-html="true" data-content="{{{member.skills}}}">
-              <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
+          <div class='col-sm-12 center nopadding margin-top-20'>
+
+              <div href="#" data-toggle="popover" data-container="body" style="z-index:1000; position:relative"
+                  title="SKILLS" data-html="true" data-content="{{{member.skills}}}">
+              <div class='full'>
+                <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
+              </div>
             </div>
           </div>
       </div>
