--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,7 +64,7 @@
       <div class="back">
         <div>
             <div class='col-sm-12 center margin-top'>
-              <a href='#'><i class="fa fa-envelope-o fa-3x black"></i></a>
+              <a href='mailto:{{ member.email }}'><i class="fa fa-envelope-o fa-3x black"></i></a>
             </div>
 
             <div class='col-sm-12 nopadding center margin-top'>
