Move Mustache templates to separate file

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,109 +17,7 @@
     <span class="team">team://</span><span class="member1">01.</span><span class="member2">02.</span><span class="member3">03.</span><span class="member4">04</span>
   </div>
 
-  {% raw %}
-    <script id="member-template" type="x-tmpl-mustache">
-      <div class="front">
-        <div>
-          <div class='col-sm-12 member_number pull-right'>
-            0{{ member.id }}
-          </div>
-          <div class='col-sm-12 member_name'>
-            {{ member.first_name }}
-            <br/>
-            <b>{{ member.last_name }}</b>
-          </div>
-        </div>
-      </div>
-
-      <div class="back">
-         <img class='member-image' src="/static/img/member_{{ member.id }}.jpg" />
-      </div>
-    </script>
-  {% endraw %}
-
-  {% raw %}
-    <script id="member-template-info" type="x-tmpl-mustache">
-      <div class="front">
-      </div>
-      <div class="back">
-        <div>
-           <div>
-              <div class='col-sm-12 member-text member-text-large'>
-                  {{ member.first_name }} <br/> {{ member.last_name }}
-              </div>
-              <div class='col-sm-12 margin-top member-text member-text-mid'>
-                  {{ member.university }} <br> {{ member.year }}
-              </div>
-          </div>
-        </div>
-      </div>
-    </script>
-  {% endraw %}
-
-  {% raw %}
-    <script id="member-template-links" type="x-tmpl-mustache">
-      <div class="front">
-      </div>
-      <div class="back">
-        <div>
-            <div class='col-sm-12 center margin-top'>
-              <a href='mailto:{{ member.email }}'><i class="fa fa-envelope-o fa-3x black"></i></a>
-            </div>
-
-            <div class='col-sm-12 nopadding center margin-top'>
-                  <a href="{{ member.linkedin }}" target="_blank"><i class="fa fa-linkedin-square fa-3x black hover-expand"></i></a>
-                  <a href="{{ member.github }}" target="_blank"><i class="fa fa-github-square fa-3x black hover-expand"></i></a>
-            </div>
-        </div>
-      </div>
-    </script>
-  {% endraw %}
-
-  {% raw %}
-    <script id="member-template-skills" type="x-tmpl-mustache">
-      <div class="front">
-      </div>
-      <div class="back">
-          <div class='col-sm-12 center nopadding margin-top-20'>
-
-              <div href="#" data-toggle="popover" data-container="body" style="z-index:1000; position:relative"
-                  title="SKILLS" data-html="true" data-content="{{{member.skills}}}">
-              <div class='full'>
-                <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
-              </div>
-            </div>
-          </div>
-      </div>
-    </script>
-  {% endraw %}
-
-   {% raw %}
-    <script id="member-template-close" type="x-tmpl-mustache">
-        <div class='col-sm-12 close-card nopadding'>
-          <img class='member-image' src="/static/img/member_{{ member.id }}.jpg" />
-        </div>
-    </script>
-  {% endraw %}
-
-   {% raw %}
-    <script id="member-template-vote" type="x-tmpl-mustache">
-      <div class="front">
-        <div>
-        </div>
-      </div>
-      <div class="back">
-        <div>
-          <div class='col-sm-12 margin-top-20 center'>
-              <i class="fa fa-eye fa-3x black"></i>
-          </div>
-          <div class='col-sm-12 center nopadding member-text member-text-extra-large'>
-              {{ member.rank }}
-          </div>
-        </div>
-      </div>
-    </script>
-  {% endraw %}
+  {% include 'templates.html' %}
 
   <div class="container">
   </div>
