--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,12 @@
     <span class="team">team://</span><span class="member1">01.</span><span class="member2">02.</span><span class="member3">03.</span><span class="member4">04</span>
   </div>
 
-  {% include 'templates.html' %}
+  {% include 'templates/member.html' %}
+  {% include 'templates/member/close.html' %}
+  {% include 'templates/member/info.html' %}
+  {% include 'templates/member/links.html' %}
+  {% include 'templates/member/skills.html' %}
+  {% include 'templates/member/vote.html' %}
 
   <div class="container">
   </div>
