--- a/app/views/templates/member/skills.html
+++ b/app/views/templates/member/skills.html
@@ -5,13 +5,14 @@
     <div class="back">
         <div class='col-sm-12 center nopadding margin-top-20'>
 
-            <div href="#" data-toggle="popover" data-container="body" style="z-index:1000; position:relative"
-                title="SKILLS" data-html="true" data-content="{{{member.skills}}}">
+            <div href="#" data-toggle="popover" data-html="true" data-container="body" style="z-index:1000; position:relative" title="SKILLS" data-html="true" data-content="{{{member.skills}}}">
             <div class='full'>
-              <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
+                <i class="fa fa-wrench faa-wrench fa-5x black animated-hover"></i>
             </div>
           </div>
         </div>
     </div>
+
+
   </script>
 {% endraw %}
