--- a/app/views/templates/member/vote.html
+++ b/app/views/templates/member/vote.html
@@ -6,10 +6,13 @@
     </div>
     <div class="back">
       <div>
-        <div class='col-sm-12 margin-top-20 center'>
+        <div class='col-sm-12 margin-top center'>
             <i class="fa fa-eye fa-3x black"></i>
         </div>
-        <div class='col-sm-12 center nopadding member-text member-text-extra-large'>
+        <div class='col-sm-12 center nopadding member-text member-text-mid'>
+           Views
+        </div>
+        <div class='col-sm-12 center nopadding member-text member-text-large'>
             {{ member.rank }}
         </div>
       </div>
