No no no, MY last commit

--- a/app/views/templates/member/vote.html
+++ b/app/views/templates/member/vote.html
@@ -10,7 +10,9 @@
             <i class="fa fa-eye fa-3x black"></i>
         </div>
         <div class='col-sm-12 center nopadding member-text member-text-extra-large'>
+          <div class="member_rank" data-id="{{ member.id }}">
             {{ member.rank }}
+          </div>
         </div>
       </div>
     </div>
