--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,6 +18,9 @@
   <div class="col-sm-4 logo">
     <span class="team">team://</span><span class="member1">01.</span><span class="member2">02.</span><span class="member3">03.</span><span class="member4">04</span>
   </div>
+  <div class="col-sm-12 source-code">
+    <a href="https://github.com/ArijanaBrlek/team_1234_portfolio" target="_blank">[GitHub]</a>
+  </div>
 
   {% include 'templates/member.html' %}
   {% include 'templates/member/close.html' %}
