--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -6,13 +6,13 @@ html, body {
     overflow: hidden;
 }
 
-body { 
+body {
     background: url('/static/img/pic6.jpg') no-repeat center center fixed;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-} 
+}
 
 .container {
     padding: 0;
@@ -33,7 +33,7 @@ body {
     transition: background 2s;
     border: 1px solid #000;
     border-width: 0 1px 1px 0;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.3);  
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.3);
     float: left;
     display: block;
 }
@@ -80,6 +80,7 @@ body {
     opacity: 1;
     border: 0px solid #F25C5C;
     border-width:0;
+    cursor: pointer;
 }
 
 .member_cell_2 {
@@ -91,6 +92,7 @@ body {
     opacity: 1;
     border: 0px solid #2FC26A;
     border-width:0;
+    cursor: pointer;
 }
 
 .member_cell_3 {
@@ -102,6 +104,7 @@ body {
     opacity: 1;
     border: 0px solid #FFBB40;
     border-width: 0;
+    cursor: pointer;
 }
 
 .member_cell_4 {
@@ -113,13 +116,14 @@ body {
     opacity: 1;
     border: 0px solid #53A3CF;
     border-width: 0;
+    cursor: pointer;
 }
 
 .member_number {
     color: white;
     font-size: 45px;
     border-width: 0;
-    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);  
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
     float: right;
     text-align: right;
     margin-right: 5px;
@@ -129,7 +133,7 @@ body {
     color: white;
     font-size: 18px;
     border-width: 0;
-    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);  
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
     float: left;
 }
 
